--- a/ToolBar5/app/src/main/res/values/strings.xml
+++ b/ToolBar5/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ToolBar</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_menu">MenuActivity</string>
 </resources>
