--- a/ToolBar5/androidnewfeature/src/main/res/values/strings.xml
+++ b/ToolBar5/androidnewfeature/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidNewFeature</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_collapsing_toolbar">CollapsingToolbarActivity</string>
 </resources>
